--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "main": "setImmediate.js",
     "scripts": {
         "lint": "jshint setImmediate.js",
-        "test": "mocha",
+        "test": "mocha test/tests.js",
         "test-browser": "zuul --server 9000 test/tests.js"
     },
     "devDependencies": {
