--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "testling": {
         "browsers": {
             "ie": [6, 7, 8, 9],
-            "chrome": [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, "canary"],
-            "firefox": [3, 3.5, 3.6, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, "nightly"],
+            "chrome": [4, 23, "canary"],
+            "firefox": [3, 3.5, 3.6, 4, 17, "nightly"],
             "opera": [10, 10.5, 11, 11.5, 11.6, 12, "next"],
             "safari": ["5.0.5", 5.1]
         },
