Point to the actual tests file.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
             "safari": ["5.0.5"]
         },
         "harness": "mocha",
-        "files": "test/test.js"
+        "files": "test/tests.js"
     }
 }
