--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "NobleJS",
     "contributors": [
         "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
-        "Donavon West",
+        "Donavon West <github@donavon.com> (http://donavon.com)",
         "Yaffle"
     ],
     "license": "MIT",
