--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
         "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007"
     },
     "devDependencies": {
-        "jshint": ">= 0.9.1",
-        "mocha": ">= 1.7.4",
-        "zuul": ">= 0.0.1",
-        "http-server": ">= 0.5.3",
-        "opener": ">= 1.1.0"
+        "jshint": "~1.1",
+        "mocha": "1.9.x",
+        "zuul": "0.0.6",
+        "http-server": "~0.5.3",
+        "opener": "~1.3"
     },
     "testling": {
         "browsers": {
