--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "mocha test/tests.js -R nyan",
     "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007",
     "start": "npm run-script build",
-    "build": "component build -o dist -n setImmediate -s setImmediate"
+    "build": "component build -o dist -n setImmediate -s immediate"
   },
   "devDependencies": {
     "jshint": "~1.1",
