--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immediate",
   "description": "A shim for the setImmediate efficient script yielding API",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "author": "NobleJS",
   "contributors": [
     "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
@@ -20,7 +20,8 @@
     "test": "mocha test/tests.js -R nyan",
     "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007",
     "start": "npm run-script build",
-    "build": "component build -o dist -n setImmediate -s immediate"
+    "build": "component build -o dist -n setImmediate -s setImmediate",
+    "noConflict": "component build -o dist -n immediate -s immediate"
   },
   "devDependencies": {
     "jshint": "~1.1",
