--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immediate",
   "description": "A shim for the setImmediate efficient script yielding API",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "author": "NobleJS",
   "contributors": [
     "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
@@ -15,7 +15,7 @@
     "url": "git://github.com/calvinmetcalf/setImmediate.git"
   },
   "bugs": "https://github.com/calvinmetcalf/setImmediate/issues",
-  "main": "dist/setImmediate.js",
+  "main": "dist/immediate.js",
   "scripts": {
     "test": "mocha test/tests.js -R nyan",
     "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007",
