--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immediate",
   "description": "A shim for the setImmediate efficient script yielding API",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "contributors": [
     "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
     "Donavon West <github@donavon.com> (http://donavon.com)",
@@ -17,16 +17,17 @@
   "main": "dist/immediate.js",
   "scripts": {
     "test": "mocha test/tests.js -R nyan",
-    "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007",
-    "build": "component build -o dist -n immediate -s immediate",
-    "amd": "component build -o dist -R -n main"
+    "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007"
   },
   "devDependencies": {
     "jshint": "~1.1",
     "mocha": "1.9.x",
     "http-server": "~0.5.3",
     "opener": "~1.3",
-    "component": "~0.17.6"
+    "component": "~0.17.6",
+    "grunt-component": "~0.1.7",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt": "~0.4.1"
   },
   "testling": {
     "browsers": [
