--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immediate",
   "description": "A shim for the setImmediate efficient script yielding API",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "contributors": [
     "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
     "Donavon West <github@donavon.com> (http://donavon.com)",
@@ -14,7 +14,7 @@
     "url": "git://github.com/calvinmetcalf/setImmediate.git"
   },
   "bugs": "https://github.com/calvinmetcalf/setImmediate/issues",
-  "main": "dist/immediate.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha test/tests.js -R nyan",
     "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007"
@@ -28,6 +28,9 @@
     "grunt-component": "~0.1.7",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt": "~0.4.1"
+  },
+  "jam":{
+    "main": "dist/immediate.js"
   },
   "testling": {
     "browsers": [
