--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "immediate",
   "version": "2.4.3",
-  "homepage": "https://github.com/calvinmetcalf/setImmediate",
+  "homepage": "https://github.com/calvinmetcalf/immediate",
   "authors": [
     "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
     "Donavon West <github@donavon.com> (http://donavon.com)",
     "Yaffle",
-    "Calvin Metcalf <calvin.metcalf@state.ma.us>"
+    "Calvin Metcalf <calvin.metcalf@gmail.com>"
   ],
   "main": "dist/immediate.js",
   "license": "MIT",
