--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immediate",
-  "description": "A shim for the setImmediate efficient script yielding API",
-  "version": "2.4.3",
+  "description": "A polyfill for the setImmediate efficient script yielding API",
+  "version": "2.5.0",
   "contributors": [
     "Domenic Denicola <domenic@domenicdenicola.com> (http://domenicdenicola.com)",
     "Donavon West <github@donavon.com> (http://donavon.com)",
@@ -11,9 +11,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/calvinmetcalf/setImmediate.git"
+    "url": "git://github.com/calvinmetcalf/immediate.git"
   },
-  "bugs": "https://github.com/calvinmetcalf/setImmediate/issues",
+  "bugs": "https://github.com/calvinmetcalf/immediate/issues",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha test/tests.js -R nyan",
@@ -24,12 +24,12 @@
     "mocha": "1.9.x",
     "http-server": "~0.5.3",
     "opener": "~1.3",
-    "component": "~0.17.6",
-    "grunt-component": "~0.1.7",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "browserify": "~2.35.0",
+    "grunt-browserify": "~1.2.9"
   },
-  "jam":{
+  "jam": {
     "main": "dist/immediate.js"
   },
   "testling": {
