--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "type": "git",
     "url": "git://github.com/calvinmetcalf/immediate.git"
   },
-  "browser":{
-    "./lib/nextTick.js":"./lib/fakeNextTick.js"
-   },
+  "browser": {
+    "./lib/nextTick.js": "./lib/fakeNextTick.js"
+  },
   "bugs": "https://github.com/calvinmetcalf/immediate/issues",
   "main": "lib/index.js",
   "scripts": {
@@ -23,14 +23,17 @@
     "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007"
   },
   "devDependencies": {
-    "jshint": "~1.1",
-    "mocha": "1.9.x",
     "http-server": "~0.5.3",
     "opener": "~1.3",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt": "~0.4.1",
     "browserify": "~2.35.0",
-    "grunt-browserify": "~1.2.9"
+    "grunt-browserify": "~1.2.9",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-saucelabs": "~4.1.2",
+    "grunt-contrib-jshint": "~0.7.0",
+    "mocha": "~1.13.0",
+    "chai": "~1.8.1"
   },
   "jam": {
     "main": "dist/immediate.js"
