--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "bugs": "https://github.com/calvinmetcalf/immediate/issues",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test/tests.js -R nyan",
-    "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007"
+    "test": "grunt test"
   },
   "devDependencies": {
     "http-server": "~0.5.3",
