Add test-browser script using Zuul.

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "scripts": {
         "lint": "jshint setImmediate.js",
         "test": "mocha test/tests.js",
+        "test-browser": "opener http://localhost:9008/__zuul && zuul test/tests.js --ui mocha-bdd --local 9008",
         "test-browser-only": "opener http://localhost:9007/test/browserOnly/index.html && http-server . -p 9007"
     },
     "devDependencies": {
         "jshint": "~1.1",
         "mocha": "1.9.x",
         "http-server": "~0.5.3",
-        "opener": "~1.3"
+        "opener": "~1.3",
+        "zuul": "^1.6.4"
     },
     "testling": {
         "browsers": [
