--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     },
     "devDependencies": {
         "jshint": "^2.5.0",
-        "mocha": "1.9.x",
-        "http-server": "~0.5.3",
-        "opener": "~1.3",
+        "mocha": "~1.18.2",
+        "http-server": "~0.6.1",
+        "opener": "^1.3",
         "zuul": "^1.6.4"
     },
     "testling": {
