Export `setImmediate` and `clearImmediate` for direct access via AMD and CommonJS

--- a/.jshintrc
+++ b/.jshintrc
@@ -16,6 +16,7 @@
     "unused": true,
     "white": true,
     "globals": {
-        "MessageChannel": false
+        "MessageChannel": false,
+        "define": false
     }
 }
