--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "setimmediate",
     "description": "A shim for the setImmediate efficient script yielding API",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "author": "YuzuJS",
     "contributors": [
         "Domenic Denicola <domenic@domenicdenicola.com> (http://domenic.me)",
         "Donavon West <github@donavon.com> (http://donavon.com)",
-        "Yaffle"
+        "Yaffle",
+        "Lcf.vs (https://github.com/Lcfvs)"
     ],
     "license": "MIT",
     "repository": "git://github.com/YuzuJS/setImmediate.git",
